--- a/resources/iiq.properties
+++ b/resources/iiq.properties
@@ -68,7 +68,7 @@ dataSource.password=sailpoint
 
 ##### MySQL #####
 ## URL Format: dataSource.url=jdbc:mysql://<host_name>:<port>/<dbname>?useServerPrepStmts=true&tinyInt1isBit=true&useUnicode=true&characterEncoding=utf8
-dataSource.url=jdbc:mysql://192.168.118.35/identityiq?useServerPrepStmts=true&tinyInt1isBit=true&useUnicode=true&characterEncoding=utf8
+    dataSource.url=jdbc:mysql://192.168.118.35/identityiq?useServerPrepStmts=true&tinyInt1isBit=true&useUnicode=true&characterEncoding=utf8
 dataSource.driverClassName=com.mysql.jdbc.Driver
 sessionFactory.hibernateProperties.hibernate.dialect=sailpoint.persistence.MySQL5InnoDBDialect
 
@@ -101,15 +101,15 @@ sessionFactory.hibernateProperties.hibernate.dialect=sailpoint.persistence.MySQL
 
 # Determines whether or not plugins are enabled, change
 # to false if plugins should be disabled globally
-plugins.enabled=true
+plugins.enabled=false
 
 # Determines if SQL scripts should be executed dynamically
 # at the time a plugin is installed, upgraded or uninstalled
-plugins.runSqlScripts=true
+plugins.runSqlScripts=false
 
 # Determines if XML object files should be imported dynamically
 # at the time a plugin is installed, upgraded or uninstalled
-plugins.importObjects=true
+plugins.importObjects=false
 
 
 ##### Application Server Managed Plugins Data Source Properties #####
